[core,build] replace deprecated Class.newInstance
Rethrow TypeNotPresentException where appropriate

Signed-off-by: Artem Kotsynyak <kotsynyak@ispras.ru>